; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_get_shared_index_expire_date.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_get_shared_index_expire_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_shared_index_expire_date.shared_index_expire_date = internal global i64 0, align 8
@get_shared_index_expire_date.shared_index_expire_date_prepared = internal global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"splitindex.sharedindexexpire\00", align 1
@shared_index_expire = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @get_shared_index_expire_date to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_shared_index_expire_date() #0 {
  %1 = load i32, i32* @get_shared_index_expire_date.shared_index_expire_date_prepared, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %7, label %3

3:                                                ; preds = %0
  %4 = call i32 @git_config_get_expiry(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32* @shared_index_expire)
  %5 = load i32, i32* @shared_index_expire, align 4
  %6 = call i64 @approxidate(i32 %5)
  store i64 %6, i64* @get_shared_index_expire_date.shared_index_expire_date, align 8
  store i32 1, i32* @get_shared_index_expire_date.shared_index_expire_date_prepared, align 4
  br label %7

7:                                                ; preds = %3, %0
  %8 = load i64, i64* @get_shared_index_expire_date.shared_index_expire_date, align 8
  ret i64 %8
}

declare dso_local i32 @git_config_get_expiry(i8*, i32*) #1

declare dso_local i64 @approxidate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
